# agentic-search-audit

./: .codecov.yml  .dockerignore  .env.example  .eslintrc.json  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CI_TESTING_SUMMARY.md  CLAUDE.md  CODE_REFERENCES.md  CONTRIBUTING.md  DEMO_RUNBOOK.md  Dockerfile  Dockerfile.api  Dockerfile.worker  LICENSE  LLM_DETECTION_ANALYSIS.md  Makefile  PRODUCTION_READINESS_OVERVIEW.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  SECURITY.md  TESTING.md  VLLM_SETUP.md  alembic.ini  docker-compose.yml  package.json  pnpm-lock.yaml  pyproject.toml  requirements-dev.txt  requirements.txt  test_env_loading.py  tsconfig.json  vitest.config.ts
.github/workflows/: ci.yml  dependency-review.yml  pr-check.yml
.husky/: commit-msg  pre-commit  pre-push
alembic/: env.py
alembic/versions/: 10b7cb21af22_initial_migration_create_all_tables.py  a1b2c3d4e5f6_add_billing_columns_to_users.py  a3f8d2c91b47_add_gdpr_consent_and_deletion_columns.py
apps/cli/: package.json
configs/: default.yaml  openrouter-example.yaml
configs/sites/: adidas.yaml  amazon.yaml  argos.yaml  asos.yaml  bestbuy.yaml  boots.yaml  bq.yaml  burberry.yaml  carrefour.yaml  costco.yaml  currys.yaml  decathlon.yaml  douglas.yaml  ebay.yaml  etsy.yaml  fnac.yaml  gap.yaml  hm.yaml  homedepot.yaml  ikea.yaml  jcpenney.yaml  johnlewis.yaml  kohls.yaml  laredoute.yaml  lowes.yaml  macys.yaml  marksandspencer.yaml  mediamarkt.yaml  nike.yaml  (+14 more)
docs/: GAP_ANALYSIS.md  INTELLIGENT_DETECTION.md  PRIVACY_POLICY.md  TERMS_OF_SERVICE.md
examples/: custom_queries.json  custom_site.yaml
monitoring/: prometheus.yml
scripts/: demo.sh  smoke.sh
tests/: __init__.py  conftest.py  helpers.py  test_adaptive_throttle.py  test_api_deps.py  test_browser_factory.py  test_bugfixes.py  test_cdp_client.py  test_challenge_detector.py  test_checkpoint_resume.py  test_cli.py  test_comparison.py  test_compliance.py  test_config.py  test_core_config.py  test_extractors.py  test_intent_classifier.py  test_judge.py  test_judge_retry.py  test_lazy_loading.py  test_maturity.py  test_orchestrator_retry.py  test_pdp_analyzer.py  test_playwright_client.py  test_policies.py  test_proxy_rotator.py  test_query_gen.py  test_rate_limiter.py  test_report.py  test_repositories.py  test_stealth.py  test_tribunal_prosecution.py  test_types.py  test_ua_rotator.py  test_undetected_client.py  test_uplift_planner.py  test_vision_provider.py
(+120 files in other folders)
